--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <form id="new-sport-form">
         <div id="form-item">
             <label for="first_name">First Name:</label>
-            <input type="text" id="first-name" required/>
+            <input type="text" id="first_name" required/>
         </div>
         <div id="form-item">
             <label for="last_name">Last Name:</label>
-            <input type="text" id="last-name" required>
+            <input type="text" id="last_name" required>
         </div>
         <div id="form-item">
             <label for="sport">Sport:</label>
@@ -36,16 +36,17 @@
                 <option value="English">Irish</option>
             </select>
         </div>
+        <div id="form-item">
+            <input type="submit" value="Add"/>
+        </div>
     </form>
+
+    <button id="delete-all">Delete All</button>
+
     <h1>List of sports people:</h1>
+    <ul id="sport-stars"></ul>
+
+
 </body>
 </html>
 
-
-
-<head>
-    <meta charset="utf-8">
-    <title>Reading List App</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="js/app.js"></script>
-  </head>
