--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/app.js"></script>
 </head>
+<div id="all">
 <body>
-    <h1>Add a sports star:</h1>
+    <h1>Add an Athlete:</h1>
     <form id="new-sport-form">
         <div id="form-item">
             <label for="first_name">First Name:</label>
@@ -37,16 +38,17 @@
             </select>
         </div>
         <div id="form-item">
-            <input type="submit" value="Add"/>
+            <input id="input-button" type="submit" value="Add"/>
         </div>
     </form>
 
     <button id="delete-all">Delete All</button>
 
-    <h1>List of sports people:</h1>
+    <h1>List of athletes:</h1>
     <ul id="sport-stars"></ul>
 
 
 </body>
+</div>
 </html>
 
